--- a/tutors/templates/tutors/login.html
+++ b/tutors/templates/tutors/login.html
@@ -17,10 +17,10 @@
             <div class="col-md-6 mx-auto">
               <div class="card">
                 <div class="card-header text-black">
-                  <h2>Login</h2>
+                  <h2>Tutor</h2>
                 </div>
                 <div class="card-body">
-                    <form action="{% url 'login' %}" method="POST" novalidate>
+                    <form action="{% url 'tutor-login' %}" method="POST" novalidate>
                       {% csrf_token %}
                          {% for field in form.visible_fields %}
                            <div class="form-group">
