avbar links updated

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -49,7 +49,7 @@
               </li> <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">ADMISSIONS</a>
               </li> <li class="nav-item">
-                <a class="nav-link" href="{% url '' %}">CAREERS</a>
+                <a class="nav-link" href="{% url 'tutor-reg' %}">CAREERS</a>
               </li>
             </li> <li class="nav-item">
                 <a class="nav-link" href="#"></a>
