styling the hero section of the home page

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Offcanvas navbar large">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">MASOMO <span>POPOTE</span></a>
+      <a class="navbar-brand" href="#" style="font-weight: bold;">MASOMO <span style="color: #5E5CC0;">POPOTE</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -61,14 +61,69 @@
               </li>
            
           </ul>
-          <!-- <form class="d-flex mt-3 mt-lg-0" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
         </div>
       </div>
     </div>
   </nav>
+<div class="container-fluid">
+    <!--HeroSection-->
+    <div class="container">
+    <div class="row pt-5">
+        <div class="col-4">
+            <div style="height: 50px;">
+            </div>
+            <div style="height: 100px;">
+
+            </div>
+            <h1 class="bold">
+                Get Access to free learning resources!
+            </h1>
+            <div style="height: 25px;">
+            </div>
+            <h6>
+                Sign up for free, and reveal the <span style="color: #5E5CC0; font-weight: bold;">MORE</span> in you!
+            </h6>
+            <div style="height: 50px;">
+            </div>
+            <button class="button-1" role="button">ENROLL NOW</button>
+
+        </div>
+        
+        <div class="col-8 hero" style="height: 700px;">
+
+        </div>
+    </div>
+
+    </div>
+
+<!--ABOUT-->
+
+
+
+<!--PROGRAMS-->
+
+
+
+
+<!--FOOTER-->
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 
 
