--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -75,7 +75,7 @@
             <div style="height: 100px;">
 
             </div>
-            <h1 class="bold">
+            <h1 class="fw-bold">
                 Get Access to free learning resources!
             </h1>
             <div style="height: 25px;">
@@ -89,7 +89,7 @@
 
         </div>
         
-        <div class="col-8 hero" style="height: 700px;">
+        <div class="col-8 hero">
 
         </div>
     </div>
@@ -97,16 +97,40 @@
     </div>
 
 <!--ABOUT-->
-<div class="container" id="about">
+<div class="container  pt-5" id="about">
     <h1 class="text-center">
         ABOUT US
     </h1>
+    <div class="row mt-3">
+        <div class="col-5 abtText">
+            <p class="text-center abtParagraph" style="height: 30px;"></p>
+            <p class="text-center abtParagraph">
+                We conveniently enable students from across the globe
+                access learning materials from wherever they are.
+            </p>
+        <p class="text-center abtParagraph"></p>
+            <p class="text-center abtParagraph">
+            This in turns connects learners and their tutors from 
+            anywhere across the globe.
+            </p>
+        <p class="text-center abtParagraph"></p>
+
+            <p class="text-center abtParagraph">
+                Create an account with us today and get access 
+                to some of the most sought after learning material
+                there is .
+            </p>
+        </div>
+        <div class="col aboutImg">
+
+        </div>
+    </div>
 </div>
 
 
 <!--PROGRAMS-->
 
-<div class="container" id="programs">
+<div class="container  pt-5" id="programs">
     <h1 class="text-center">
         OUR PROGRAMS
     </h1>
