updating about us section

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -67,7 +67,7 @@
   </nav>
 <div class="container-fluid">
     <!--HeroSection-->
-    <div class="container">
+    <div class="container pb-3">
     <div class="row pt-5">
         <div class="col-4">
             <div style="height: 50px;">
@@ -103,7 +103,6 @@
     </h1>
     <div class="row mt-3">
         <div class="col-5 abtText">
-            <p class="text-center abtParagraph" style="height: 30px;"></p>
             <p class="text-center abtParagraph">
                 We conveniently enable students from across the globe
                 access learning materials from wherever they are.
@@ -113,8 +112,6 @@
             This in turns connects learners and their tutors from 
             anywhere across the globe.
             </p>
-        <p class="text-center abtParagraph"></p>
-
             <p class="text-center abtParagraph">
                 Create an account with us today and get access 
                 to some of the most sought after learning material
@@ -127,10 +124,9 @@
     </div>
 </div>
 
-
 <!--PROGRAMS-->
 
-<div class="container  pt-5" id="programs">
+<div class="container  pt-2" id="programs">
     <h1 class="text-center">
         OUR PROGRAMS
     </h1>
