--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -1,1 +1,18 @@
-<h1>Students</h1>
+{% load static%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <title>sidebar</title>
+    {% block styles %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% endblock styles %}
+</head>
+<body>
+    {% include 'sidenav.html' %}
+   
+</body>
+</html>
