optimized side nav for student dashboard

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -8,7 +8,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src={% static 'js/main.js' %} defer></script>
+    <script src="{% static 'js/main.js' %}" defer></script>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     {% if title %}
         <title>Masomo Popote-{{ title }}</title>
@@ -90,7 +90,7 @@
         </div>
         
         <div class="col-8 hero">
-
+          <img src="static/assets/hero.png" alt="">
         </div>
     </div>
 
