--- a/students/templates/sidenav.html
+++ b/students/templates/sidenav.html
@@ -21,39 +21,22 @@
                 <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-home-alt icon' ></i>
-                        <span class="text nav-text">Dashboard</span>
+                        <span class="text nav-text">HOME</span>
                     </a>
                 </li>
                 <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-bar-chart-alt-2 icon' ></i>
-                        <span class="text nav-text">Revenue</span>
+                        <span class="text nav-text">PROGRAMS</span>
                     </a>
                 </li>
                 <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-bell icon' ></i>
-                        <span class="text nav-text">Notifications</span>
+                        <span class="text nav-text">TESTS</span>
                     </a>
                 </li>
-                <li class="nav-link">
-                    <a href="#">
-                        <i class='bx bx-pie-chart-alt icon' ></i>
-                        <span class="text nav-text">Analytics</span>
-                    </a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">
-                        <i class='bx bx-heart icon' ></i>
-                        <span class="text nav-text">Likes</span>
-                    </a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">
-                        <i class='bx bx-wallet icon' ></i>
-                        <span class="text nav-text">Wallets</span>
-                    </a>
-                </li>
+                                
             </ul>
         </div>
         <div class="bottom-content">
@@ -81,4 +64,4 @@
 <section class="home">
     <div class="text">Dashboard</div>
 </section>
-<script src="script.js"></script>
+<script src="{% static 'js/script.js' %}"></script>
