--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -30,9 +30,12 @@
                                       <span style="color:red">{{ error }}</span>
                                     {% endfor %}
                          {% endfor %}
+                         <br>
                              <input type="submit" value="Register" class="btn btn-block btn-primary">
                            </div>
                     </form>
+                    <small>Already have an Account? Log In here</small>
+                    <a href="{% url 'login' %}" class="btn btn-block btn-primary">LOGIN HERE</a>
                  </div>
                     </div>   
                 </div>
