--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -80,7 +80,7 @@
     /* ==== Colors ===== */
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --primary-color: #5E5CC0;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
@@ -320,8 +320,9 @@ body.dark .switch::before {
     background: var(--body-color);
     transition: var(--tran-05);
 }
+
 .home .text {
-    position: relative;
+    
     font-size: 30px;
     font-weight: 500;
     color: var(--text-color);
@@ -332,3 +333,64 @@ body.dark .switch::before {
     width: calc(100% - 88px);
 }
 
+.new, .what{
+    width: 45%;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 16px;
+    border-top: 0;
+    padding: 20px 25px;
+    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+}
+
+.courses {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 16px;
+    margin-top: 4%;
+    border-top: 0;
+    padding: 20px 25px;
+    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px); 
+}
+
+.tests, .headline{
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 16px;
+    border-top: 0;
+    margin-top: 2.5%;
+    padding: 20px 15px;
+    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+}
+.text-muted{
+    color: gray;
+}
+ .intro {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+p progress[value].ang {
+    color: #5E5CC0;
+    border: 0;
+    height: 18px;
+    border-radius: 15px;
+  
+}
+.angular,.react,.python {
+    width: 30%;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 16px;
+    border-top: 0;
+    margin-top: 2.5%;
+    padding: 20px 15px;
+    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+}
