--- a/students/templates/base.html
+++ b/students/templates/base.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <title>sidebar</title>
+    <title>Moasomo Popote</title>
+    
     {% block styles %}
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
