--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -12,7 +12,7 @@
     <header>
         <div class="image-text">
             <div class="text header-text">
-                <span class="name">MASOMO POPOTE</span><br>
+                <span class="name">MASOMO <span style="color: #5E5CC0;">POPOTE</span> </span><br>
             </div>
         </div>
         
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav-link">
                     <a href="#">
-                        <i class='bx bx-bell icon' ></i>
+                        <i class='bx bx-notepad icon' ></i>
                         <span class="text nav-text">TESTS</span>
                     </a>
                 </li>
@@ -70,7 +70,76 @@
     </div>
 </nav>
 <section class="home">
-    <div class="text">Dashboard</div>
+    <h3 class="text">My Dashboard</h3>
+    <div class="intro">
+        <div class="card new">
+            <h4 class="text-muted">Available tests:</h4>
+            <div class="card tests">
+                <h4 style="color: #5E5CC0;">React Fundamentals</h4>
+                <small>Deadline 22/08/2022</small>
+                <strong><p style="float: right; text-transform: uppercase; color:#5E5CC0;">ATTEMPT</p></strong>
+            </div>
+            <div class="card tests">
+                
+                <h4 style="color: #5E5CC0;">React Fundamentals</h4>
+                <small>Deadline 22/08/2022</small>
+                <strong><p style="float: right; text-transform: uppercase; color:#5E5CC0;">ATTEMPT</p></strong>
+            </div>
+            <div class="card tests">
+                
+                <h4 style="color: #5E5CC0;">React Fundamentals</h4>
+                <small>Deadline 22/08/2022</small>
+                <strong><p style="float: right; text-transform: uppercase; color:#5E5CC0;">ATTEMPT</p></strong>
+            </div>
+        </div>
+        <div class="what">
+            <h4 class="text-muted">What's new:</h4>
+            <div class="card headline">
+                <h4 class="">Headline 1</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
+            </div>
+                <div class="card headline">
+                <h4 class="">Headline 2</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
+            </div>
+            <div class="card headline">
+                <h4 class="">Headline 3</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores /p>
+            </div>
+        </div>
+    </div>
+    <div class="card courses">
+        
+        <div class="card angular">
+            <h4 class="text-muted">My Courses:</h4>
+            <h5 class="text-muted">Angular</h5>
+            <img src="{% static 'assets/angular.png' %}" alt="">
+            <p><progress value="100" max="100" class="ang"></progress></p>
+            <p class="text-muted">
+                <span>5/5 lessons</span>
+                <span style="float: right;">100%</span>
+            </p>
+        </div>
+        <div class="card react">
+            <h5 class="text-muted">Angular</h5>
+            <img src="{% static 'assets/react.png' %}" alt="">
+            <p><progress value="0" max="100" class="ang"></progress></p>
+            <p class="text-muted">
+                <span>0/5 lessons</span>
+                <span style="float: right;">100%</span>
+            </p>
+        </div>
+        <div class="card python">
+            <h5 class="text-muted">Angular</h5>
+            <img src="{% static 'assets/python.png' %}" alt="">
+            <p><progress value="100" max="100" class="ang"></progress></p>
+            <p class="text-muted">
+                <span>5/5 lessons</span>
+                <span style="float: right;">100%</span>
+            </p>
+        </div>
+    </div>
+    
 </section>
 
 
