fix-style:fixed dark-mode style

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -368,9 +368,7 @@ body.dark .switch::before {
     box-shadow: 0 4px 30px rgba(0,0,0,0.1);
     backdrop-filter: blur(5px);
 }
-.text-muted{
-    color: gray;
-}
+
  .intro {
     display: flex;
     flex-wrap: wrap;
@@ -385,6 +383,7 @@ p progress[value].ang {
 }
 .angular,.react,.python {
     width: 30%;
+    margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 16px;
