--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -104,7 +104,7 @@
             </div>
             <div class="card headline">
                 <h4 class="">Headline 3</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores /p>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
             </div>
         </div>
     </div>
@@ -114,8 +114,8 @@
             <h4 class="text-muted">My Courses:</h4>
             <h5 class="text-muted">Angular</h5>
             <img src="{% static 'assets/angular.png' %}" alt="">
-            <p><progress value="100" max="100" class="ang"></progress></p>
-            <p class="text-muted">
+            <p style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress></p>
+            <p style="width: 80%; margin:auto;" class="text-muted">
                 <span>5/5 lessons</span>
                 <span style="float: right;">100%</span>
             </p>
@@ -123,8 +123,8 @@
         <div class="card react">
             <h5 class="text-muted">Angular</h5>
             <img src="{% static 'assets/react.png' %}" alt="">
-            <p><progress value="0" max="100" class="ang"></progress></p>
-            <p class="text-muted">
+            <p style="width: 100%; margin:auto;"><progress value="0" max="100" class="ang"></progress></p>
+            <p style="width: 80%; margin:auto;" class="text-muted">
                 <span>0/5 lessons</span>
                 <span style="float: right;">100%</span>
             </p>
@@ -132,8 +132,8 @@
         <div class="card python">
             <h5 class="text-muted">Angular</h5>
             <img src="{% static 'assets/python.png' %}" alt="">
-            <p><progress value="100" max="100" class="ang"></progress></p>
-            <p class="text-muted">
+            <p style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress></p>
+            <p style="width: 80%; margin:auto;"class="text-muted">
                 <span>5/5 lessons</span>
                 <span style="float: right;">100%</span>
             </p>
