--- a/tutors/templates/tutors/newCourse.html
+++ b/tutors/templates/tutors/newCourse.html
@@ -17,7 +17,7 @@
             <div class="col-md-6 mx-auto">
               <div class="card">
                 <div class="card-body">
-                    <form action="{% url 'new-course' %}" method="POST" novalidate>
+                    <form action="{% url 'new-course' %}" method="POST" enctype="multipart/form-data" novalidate>
                       {% csrf_token %}
                          {% for field in form.visible_fields %}
                            <div class="form-group">
