--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,8 +1,8 @@
-
 {% load django_bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
 
     <!-- Required meta tags -->
@@ -11,131 +11,290 @@
     <script src={% static 'js/main.js' %} defer></script>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     {% if title %}
-        <title>Masomo Popote-{{ title }}</title>
+    <title>Masomo Popote-{{ title }}</title>
     {% else %}
-        <title>Masomo Popote</title>
-    {% endif %}    
-    
+    <title>Masomo Popote</title>
+    {% endif %}
+
     <!--CSS -->
     {% block styles %}
     {% bootstrap_css %}
-         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     {% endblock %}
 
 </head>
+
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Offcanvas navbar large">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Offcanvas navbar large">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold;">MASOMO <span
+                    style="color: #5E5CC0;">POPOTE</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
+                aria-controls="offcanvasNavbar2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-white bg-light" tabindex="-1" id="offcanvasNavbar2"
+                aria-labelledby="offcanvasNavbar2Label">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">ABOUT US</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#programs">PROGRAMS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">ADMISSIONS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'tutor-reg' %}">CAREERS</a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold;">MASOMO <span style="color: #5E5CC0;">POPOTE</span></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end text-white bg-light" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">ABOUT US</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#programs">PROGRAMS</a>
-              </li> <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">ADMISSIONS</a>
-              </li> <li class="nav-item">
-                <a class="nav-link" href="{% url 'tutor-reg' %}">CAREERS</a>
-              </li>
-            </li> <li class="nav-item">
-                <a class="nav-link" href="#"></a>
-              </li>
-            </li> <li class="nav-item">
-                <a class="nav-link" href="#"></a>
-              </li></li> <li class="nav-item">
-                <a class="nav-link" href="#"></a>
-              </li>
-           
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-<div class="container-fluid">
-    <!--HeroSection-->
-    <div class="container pb-3">
-    <div class="row pt-5">
-        <div class="col-4">
-            <div style="height: 50px;">
-            </div>
-            <div style="height: 100px;">
+        <!--HeroSection-->
+        <div class="container pb-3">
+            <div class="row pt-5">
+                <div class="col-4">
+                    <div style="height: 50px;">
+                    </div>
+                    <div style="height: 100px;">
 
+                    </div>
+                    <h1 class="fw-bold">
+                        Get Access to free learning resources!
+                    </h1>
+                    <div style="height: 25px;">
+                    </div>
+                    <h6>
+                        Sign up for free, and reveal the <span style="color: #5E5CC0; font-weight: bold;">MORE</span> in
+                        you!
+                    </h6>
+                    <div style="height: 50px;">
+                    </div>
+                    <button class="button-1" role="button">ENROLL NOW</button>
+
+                </div>
+
+                <div class="col-8 hero">
+
+                </div>
             </div>
-            <h1 class="fw-bold">
-                Get Access to free learning resources!
+
+        </div>
+
+        <!--ABOUT-->
+        <div class="container  pt-5" id="about">
+            <h1 class="text-center">
+                ABOUT US
             </h1>
-            <div style="height: 25px;">
-            </div>
-            <h6>
-                Sign up for free, and reveal the <span style="color: #5E5CC0; font-weight: bold;">MORE</span> in you!
-            </h6>
-            <div style="height: 50px;">
-            </div>
-            <button class="button-1" role="button">ENROLL NOW</button>
+            <div class="row mt-3">
+                <div class="col-5 abtText">
+                    <p class="text-center abtParagraph">
+                        We conveniently enable students from across the globe
+                        access learning materials from wherever they are.
+                    </p>
+                    <p class="text-center abtParagraph"></p>
+                    <p class="text-center abtParagraph">
+                        This in turns connects learners and their tutors from
+                        anywhere across the globe.
+                    </p>
+                    <p class="text-center abtParagraph">
+                        Create an account with us today and get access
+                        to some of the most sought after learning material
+                        there is .
+                    </p>
+                </div>
+                <div class="col aboutImg">
 
+                </div>
+            </div>
         </div>
+
+        <!--PROGRAMS-->
+
+        <div class="container  pt-2" id="programs">
+
+            <h1 class="text-center">OUR PROGRAMS</h1>
+
+            <div id="carouselExample1" class="carousel slide z-depth-1-half" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg"
+                            alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExample1" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExample1" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="text-center text-lg-start bg-light text-muted">
+            <!-- Section: Social media -->
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+                <!-- Left -->
+                <div class="me-5 d-none d-lg-block">
+                    <span>Get connected with us on social networks:</span>
+                </div>
+                <!-- Left -->
         
-        <div class="col-8 hero">
+                <!-- Right -->
+                <div>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <!-- Right -->
+            </section>
+            <!-- Section: Social media -->
+        
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Company name
+                            </h6>
+                            <p>
+                                Here you can use rows and columns to organize your footer content. Lorem ipsum
+                                dolor sit amet, consectetur adipisicing elit.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+        
+                        <!-- Grid column -->
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Products
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Angular</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">React</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Vue</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Laravel</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+        
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Useful links
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Pricing</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Settings</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Orders</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Help</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+        
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Contact
+                            </h6>
+                            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                            <p>
+                                <i class="fas fa-envelope me-3"></i>
+                                info@example.com
+                            </p>
+                            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+        
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                © 2021 Copyright:
+                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
 
-        </div>
+
+        <!--FOOTER-->
+
     </div>
 
-    </div>
-
-<!--ABOUT-->
-<div class="container  pt-5" id="about">
-    <h1 class="text-center">
-        ABOUT US
-    </h1>
-    <div class="row mt-3">
-        <div class="col-5 abtText">
-            <p class="text-center abtParagraph">
-                We conveniently enable students from across the globe
-                access learning materials from wherever they are.
-            </p>
-        <p class="text-center abtParagraph"></p>
-            <p class="text-center abtParagraph">
-            This in turns connects learners and their tutors from 
-            anywhere across the globe.
-            </p>
-            <p class="text-center abtParagraph">
-                Create an account with us today and get access 
-                to some of the most sought after learning material
-                there is .
-            </p>
-        </div>
-        <div class="col aboutImg">
-
-        </div>
-    </div>
-</div>
-
-<!--PROGRAMS-->
-
-<div class="container  pt-2" id="programs">
-    <h1 class="text-center">
-        OUR PROGRAMS
-    </h1>
-</div>
-
-
-<!--FOOTER-->
-
-</div>
 
 
 
@@ -151,13 +310,11 @@
 
 
 
-
-  </body>
-
+</body>
 
 
 
 
 
-  </html>
-  
+
+</html>
