--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -14,7 +14,12 @@
     <section>
         <div class="container">
           <div class="row">
+            {% load static %} <img src="{% static "students/media/study.png" %}" alt="students" />
             <div class="col-md-6 mx-auto">
+
+             
+
+
               <div class="card">
                 <div class="card-header text-black">
                   <h2>Login</h2>
