resized image in login/registration

--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -11,10 +11,20 @@
 </head>
 <body>
 
-    <section>
+    <section style="margin-top: 3%;">
         <div class="container">
           <div class="row">
-            {% load static %} <img src="{% static "students/media/study.png" %}" alt="students" />
+            <div class="col-md-5">
+
+              <div class="text">
+                <h2><strong>It's time to do the best <br>work of your life</strong></h2>
+              </div>
+
+              <div class="img">
+                {% load static %} <img src="{% static "students/media/study.png" %}" alt="students" style= "width: 80%"; height=50%";/>
+              </div>
+              
+            </div>
             <div class="col-md-6 mx-auto">
 
              
