--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -14,8 +14,18 @@
     <section>
         <div class="container">
           <div class="row">
-            
-            {% load static %} <img src="{% static "students/media/study.png" %}" alt="students" />
+            <div class="col-md-5" style="margin-top: 15%;">
+
+              <div class="text">
+                <h2><strong>It's time to do the best <br>work of your life</strong></h2>
+              </div>
+
+              <div class="img">
+                {% load static %} <img src="{% static "students/media/study.png" %}" alt="students" style= "width: 80%"; height=50%";/>
+              </div>
+              
+            </div>
+           
             <div class="col-md-6 mx-auto">
               <div class="card">
                 <div class="card-header text-black">
