added an image to tutor registration

--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -10,7 +10,8 @@
     <title>Demo Registration</title>
 </head>
 <body>
-
+  <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold;">MASOMO  <span
+    style="color: #5E5CC0;">POPOTE</span></a>
     <section style="margin-top: 3%;">
         <div class="container">
           <div class="row">
