--- a/tutors/templates/tutors/login.html
+++ b/tutors/templates/tutors/login.html
@@ -14,6 +14,18 @@
     <section>
         <div class="container">
           <div class="row">
+
+            <div class="col-md-5">
+
+              <div class="text">
+                <h2><strong>Join the best tutor team <br>in the world</strong></h2>
+              </div>
+
+              <div class="image">
+                {% load static %} <img src="{% static "tutors/media/tutors.webp" %}" alt="tutors" style= "width: 80%"; height=50%";/>
+              </div>
+              
+            </div>
             <div class="col-md-6 mx-auto">
               <div class="card">
                 <div class="card-header text-black">
