edited tutor registration margin top

--- a/tutors/templates/tutors/register.html
+++ b/tutors/templates/tutors/register.html
@@ -15,14 +15,14 @@
     <section>
         <div class="container">
           <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-5" style="margin-top: 15%;">
 
               <div class="text">
-                <h2><strong>Join the best tutor team <br>in the world</strong></h2>
+                <h2><strong>It's time to do the best <br>work of your life</strong></h2>
               </div>
 
-              <div class="image">
-                {% load static %} <img src="{% static "tutors/media/tutors.webp" %}" alt="tutors" style= "width: 80%"; height=50%";/>
+              <div class="img">
+                {% load static %} <img src="{% static "tutors/media/tutors.webp" %}" alt="students" style= "width: 80%"; height=50%";/>
               </div>
               
             </div>
@@ -48,9 +48,15 @@
                  </div>
                     </div>   
                 </div>
-              </div>
+
+
+
+              
             </div>
-        </div>
+         
+              </div>
+          
+    
       </section>
 
 </body>
