--- a/tutors/templates/tutors/login.html
+++ b/tutors/templates/tutors/login.html
@@ -12,13 +12,13 @@
 <body>
 
     <section>
-        <div class="container">
+        <div class="container" style="margin-top: 5%;">
           <div class="row">
 
             <div class="col-md-5">
 
               <div class="text">
-                <h2><strong>Join the best tutor team <br>in the world</strong></h2>
+                <h2><strong>Join the best tutor team <br>in the world today</strong></h2>
               </div>
 
               <div class="image">
@@ -27,9 +27,9 @@
               
             </div>
             <div class="col-md-6 mx-auto">
-              <div class="card">
-                <div class="card-header text-black">
-                  <h2>Tutor</h2>
+              <div class="card" style= "text-align: center;">
+                <div class="card-header text-black" style="color:#5E5CC0;">
+                  <h2><strong>Welcome Back!</strong></h2>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'tutor-login' %}" method="POST" novalidate>
