--- a/tutors/templates/tutors/register.html
+++ b/tutors/templates/tutors/register.html
@@ -28,8 +28,11 @@
             </div>
             <div class="col-md-6 mx-auto">
               <div class="card">
-                <div class="card-header text-black">
-                  <h2>Tutor</h2>
+                <div class="card-header text-black" style="color:#5E5CC0; text-align: center;">
+                  <h2><strong>Welcome!</strong></h2>
+                </div>
+                <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 2%;">
+                  <p><small>To keep connected to us please<br>enter your details here to sign up</small></p>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'tutor-reg' %}" method="POST" novalidate>
@@ -45,6 +48,7 @@
                              <input type="submit" value="Register" class="btn btn-block btn-primary">
                            </div>
                     </form>
+                    
                  </div>
                     </div>   
                 </div>
