--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -8,8 +8,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="{% static 'js/main.js' %}" defer></script>
+    <!-- <script src="{% static 'js/main.js' %}" defer></script> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     {% if title %}
     <title>Masomo Popote-{{ title }}</title>
     {% else %}
@@ -58,19 +64,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'tutor-reg' %}">CAREERS</a>
                         </li>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
-                        </li>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
-                        </li>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
-                        </li>
-
                     </ul>
                 </div>
             </div>
@@ -113,8 +106,8 @@
             <h1 class="text-center">
                 ABOUT US
             </h1>
-            <div class="row mt-3">
-                <div class="col-5 abtText">
+            <div class="rob mt-3" style="display: flex; justify-content: space-between; flex-wrap: wrap; width: 100%; ">
+                <div class="colz-5 abtText" style="width: 40%;">
                     <p class="text-center abtParagraph">
                         We conveniently enable students from across the globe
                         access learning materials from wherever they are.
@@ -130,8 +123,8 @@
                         there is .
                     </p>
                 </div>
-                <div class="col aboutImg">
-
+                <div class="colz-7 aboutImg" style="width: 60%;">
+                    <img src="{% static 'assets/aboutUs.svg' %}" alt="" width="100%">
                 </div>
             </div>
         </div>
@@ -142,47 +135,82 @@
 
             <h1 class="text-center">OUR PROGRAMS</h1>
 
-            <div id="carouselExample1" class="carousel slide z-depth-1-half" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg"
-                            alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="carousel slide" data-ride="carousel" id="carouselIndicators">
+                         <ol class="carousel-indicators">
+                            <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                            
+                          </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="colz" style="width: 50%; margin:auto;">
+                                        <div class="single-box">
+                                            <div class="img-area"><img src="{% static 'assets/angular.png'%}" alt=""></div>
+                                            <div class="img-text bg-dark">
+                                                <p class="word">
+                                                    <strong>ANGULAR</strong>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                                                      
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="colz" style="width: 50%; margin:auto;">
+                                        <div class="single-box">
+                                            <div class="img-area"><img src="{% static 'assets/python.png' %}" alt="" height="250"></div> 
+                                            <div class="img-text bg-dark">
+                                                <p class="word">
+                                                    <!-- <strong>PYTHON</strong> -->
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                            
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="colz" style="width: 50%; margin:auto;">
+                                        <div class="single-box">
+                                            <div class="img-area"><img src="{% static 'assets/react.png' %}" alt=""></div>
+                                            <div class="img-text bg-dark">
+                                                <p class="word">
+                                                    <!-- <strong>REACT</strong> -->
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselIndicators" data-slide="prev">
+                            <i class="fa fa-chevron-left"></i>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselIndicators" data-slide="next">
+                            <i class="fa fa-chevron-right"></i>
+                        </a>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExample1" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExample1" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+            
         </div>
+        <br>
         <!-- Footer -->
-        <footer class="text-center text-lg-start bg-light text-muted mt-5" style="background-color:#fff; color: #5E5CC0;">
-            <!-- Section: Social media -->
-
-                          
-            <!-- Section: Links  -->
-        
-            <!-- Copyright -->
-            <div class="text-center p-4" style="background-color:#fff;">
+        <footer class="text-center text-muted mt-5" >
+           <!-- Copyright -->
+            <div class="text-center p-4" >
                 © 2021 Copyright:
                 <a class="text-reset fw-bold" href="{% url 'home' %}" style="text-decoration: none; color:#5E5CC0">MASOMO POPOTE</a>
             </div>
-            <!-- Copyright -->
+           
         </footer>
-        <!-- Footer -->
-
-
-        <!--FOOTER-->
+        
 
     </div>
 
