--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -27,13 +27,13 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="">
                         <i class='bx bxs-graduation icon' ></i>
                         <span class="text nav-text">WELCOME STUDENT!</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="{% url 'dashboard' %}">
                         <i class='bx bx-home-alt icon' ></i>
                         <span class="text nav-text">HOME</span>
                     </a>
