atyling the new test aand new course page

--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'dashboard' %}">
+                    <a href="{% url 'students' %}">
                         <i class='bx bx-home-alt icon' ></i>
                         <span class="text nav-text">HOME</span>
                     </a>
