--- a/tutors/templates/tutors/newCourse.html
+++ b/tutors/templates/tutors/newCourse.html
@@ -1,4 +1,6 @@
 {% load widget_tweaks %}
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,16 +9,92 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-    <title>Masomo Popote-New Course</title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <title>Masomo Popote-New Test</title>
 </head>
 <body>
 
-    <section>
+  <nav class="sidebar close">
+    <header>
+        <div class="image-text">
+            <div class="text header-text">
+                <span class="name">MASOMO <span style="color: #5E5CC0;">POPOTE</span> </span><br>
+            </div>
+        </div>
+
+        <i class="bx bx-chevron-right toggle"></i>
+    </header>
+
+    <div class="menu-bar">
+        <div class="menu">
+            <li class="search-box">
+                <i class='bx bx-search icon'></i>
+                <input type="search" placeholder="Search...">
+            </li>
+            <ul class="menu-links">
+                <li class="nav-link">
+                    <a href="{% url 'tutor' %}">
+                        <i class='bx bx-home-alt icon'></i>
+                        <span class="text nav-text">HOME</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'new-course' %}">
+                        <i class='bx bx-plus-circle icon'></i>
+                        <span class="text nav-text">COURSE</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'new-test' %}">
+                        <i class='bx bx-list-plus icon'></i>
+                        <span class="text nav-text">TEST</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">
+                        <i class='bx bx-book-open icon'></i>
+                        <span class="text nav-text">POSTED COURSES</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">
+                        <i class='bx bx-slideshow icon'></i>
+                        <span class="text nav-text">POSTED TESTS</span>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="bottom-content">
+            <li class="">
+                <a href="{% url 'tutor-logout' %}">
+                    <i class='bx bx-log-out icon'></i>
+                    <span class="text nav-text">Log Out</span>
+                </a>
+            </li>
+
+            <li class="mode">
+                <div class="moon-sun">
+                    <i class='bx bx-moon icon moon'></i>
+                    <i class='bx bx-sun icon sun'></i>
+                </div>
+                <span class="mode-text text">Dark Mode</span>
+
+                <div class="toggle-switch">
+                    <span class="switch"></span>
+                </div>
+            </li>
+        </div>
+    </div>
+</nav>
+    <section class="home">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 mx-auto">
-              <div class="card">
-                <div class="card-body">
+            <div class="col-md-6 mx-auto card new">
+              
                     <form action="{% url 'new-course' %}" method="POST" enctype="multipart/form-data" novalidate>
                       {% csrf_token %}
                          {% for field in form.visible_fields %}
@@ -30,13 +108,12 @@
                              <input type="submit" value="Add Course" class="btn btn-block btn-primary">
                            </div>
                     </form>
-                 </div>
-                    </div>   
+                 
                 </div>
               </div>
             </div>
         </div>
       </section>
-
+      <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
