--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -86,12 +86,12 @@
     <div class="intro">
         <div class="card tutor">
             <h4 class="text-muted">Enrollment list:</h4>
-            {% for test in tests %}
+            {% for record in students %}
             <div class="card tests">
-                <h4 style="color: #5E5CC0;">FirstName LastName</h4>
-                <small>Program</small>
+                <h4 style="color: #5E5CC0;">{{record}} </h4>
+                <small></small> <!--Add programs-->
                 <strong>
-                    <p style="float: right; text-transform: uppercase; color:#5E5CC0;">View</p>
+                    <!-- <p style="float: right; text-transform: uppercase; color:#5E5CC0;">View</p> -->
                 </strong>
             </div>
             {% endfor %}
@@ -103,7 +103,7 @@
         <div class="card angular">
             <h5 class="text-muted">{{publishedCourse.category}}</h5>
             <img src="{{publishedCourse.coursePoster.url}}" alt="" style="height:230px">
-            <p class="pt-5" style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress>
+            <!-- <p class="pt-5" style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress> -->
             </p>
             <p style="width: 80%; margin:auto;" class="text-muted">
                 <span>Enrolled students:</span>
