updating side nav

--- a/tutors/templates/tutors/newTest.html
+++ b/tutors/templates/tutors/newTest.html
@@ -53,12 +53,12 @@
                         <span class="text nav-text">TEST</span>
                     </a>
                 </li>
-                <li class="nav-link">
-                    <a href="#">
+                <!-- <li class="nav-link">
+                    <a href="#postedCourses">
                         <i class='bx bx-book-open icon'></i>
                         <span class="text nav-text">POSTED COURSES</span>
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-slideshow icon'></i>
