--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#postedCourses">
                         <i class='bx bx-book-open icon'></i>
                         <span class="text nav-text">POSTED COURSES</span>
                     </a>
@@ -97,7 +97,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="card courses">
+    <div class="card courses" id="postedCourses">
         <h4 class="text-muted">Published Courses:</h4>
         {% for publishedCourse in publishedCourses %}
         <div class="card angular">
