fetching students count

--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -106,7 +106,8 @@
             <!-- <p class="pt-5" style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress> -->
             </p>
             <p style="width: 80%; margin:auto;" class="text-muted">
-                <span>Enrolled students:</span>
+
+                <span>Enrolled students:{{count}}</span>
             </p>
         </div>
         {% endfor %}
