--- a/students/templates/students/availablePrograms.html
+++ b/students/templates/students/availablePrograms.html
@@ -27,7 +27,7 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link">
-                    <a href="{% url 'students' %}">
+                    <a href="{% url 'home' %}">
                         <i class='bx bx-home-alt icon' ></i>
                         <span class="text nav-text">HOME</span>
                     </a>
@@ -49,7 +49,7 @@
         </div>
         <div class="bottom-content">
             <li class="">
-                <a href="{% url 'logout' %}">
+                <a href="logout">
                     <i class='bx bx-log-out icon' ></i>
                     <span class="text nav-text">Log Out</span>
                 </a>
