updating welcome text

--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -31,8 +31,8 @@
               
             </div>
             <div class="col-md-6 mx-auto card new">
-                  <h2 class="text-center pt-4" style="color: #5E5CC0;"><strong >Welcome Back!</strong></h2>
-                <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 2%;">
+              <h2 class="text-center pt-4" style="color: #5E5CC0; font-weight: bold;"><strong>Welcome Back!</strong></h2>
+              <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 2%;">
                   <p><small>Sign in to stay connected...</small></p>
                 </div>
                     <form action="{% url 'login' %}" method="POST" novalidate>
