--- a/tutors/templates/tutors/register.html
+++ b/tutors/templates/tutors/register.html
@@ -33,7 +33,7 @@
               
             </div>
             <div class="col-md-6 mb-2 mx-auto card new" style="margin-top: 5%;">
-                  <h2 class="text-center pt-4" style="color: #5E5CC0;"><strong>Welcome!</strong></h2>
+                  <h2 class="text-center pt-4" style="color: #5E5CC0;"><strong>Join The Team!</strong></h2>
                 <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 1%;">
                   <p><small>Sign up to get started...</small></p>
                 </div>
