customizing user dashboard

--- a/tutors/templates/tutors/course.html
+++ b/tutors/templates/tutors/course.html
@@ -37,7 +37,8 @@
                     <li class="nav-link">
                         <a href="">
                             <i class='bx bxs-graduation icon' ></i>
-                            <span class="text nav-text">WELCOME STUDENT!</span>
+                            <small class="text nav-text" style="font-size: 11px;">Logged in as: <small>{{user.first_name}} {{user.last_name}}</small>
+                        </small>
                         </a>
                     </li>
                     <li class="nav-link">
@@ -52,12 +53,12 @@
                             <span class="text nav-text">PROGRAMS</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                    <!-- <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-notepad icon' ></i>
                             <span class="text nav-text">TESTS</span>
                         </a>
-                    </li>
+                    </li> -->
                                     
                 </ul>
             </div>
