--- a/students/templates/students/availablePrograms.html
+++ b/students/templates/students/availablePrograms.html
@@ -27,7 +27,14 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link">
-                    <a href="{% url 'home' %}">
+                    <a href="">
+                        <i class='bx bxs-graduation icon' ></i>
+                        <small class="text nav-text" style="font-size: 11px;">Logged in as: <small>{{user.first_name}} {{user.last_name}}</small>
+                    </small>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'students' %}">
                         <i class='bx bx-home-alt icon' ></i>
                         <span class="text nav-text">HOME</span>
                     </a>
@@ -38,18 +45,18 @@
                         <span class="text nav-text">PROGRAMS</span>
                     </a>
                 </li>
-                <li class="nav-link">
+                <!-- <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-notepad icon' ></i>
                         <span class="text nav-text">TESTS</span>
                     </a>
-                </li>
+                </li> -->
                                 
             </ul>
         </div>
         <div class="bottom-content">
             <li class="">
-                <a href="logout">
+                <a href="{% url 'logout' %}">
                     <i class='bx bx-log-out icon' ></i>
                     <span class="text nav-text">Log Out</span>
                 </a>
@@ -70,7 +77,7 @@
     </div>
 </nav>
 <section class="home">
-    <h3 class="text">My Dashboard</h3>
+    <h3 class="text text-center">{{user.first_name}}'s  Dashboard</h3>
     
     <div class="card courses">
         <h4 class="text-muted">Available Courses:</h4>
