--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -29,7 +29,8 @@
                 <li class="nav-link">
                     <a href="">
                         <i class='bx bxs-graduation icon' ></i>
-                        <span class="text nav-text">WELCOME STUDENT!</span>
+                        <small class="text nav-text" style="font-size: 11px;">Logged in as: <small>{{user.first_name}} {{user.last_name}}</small>
+                    </small>
                     </a>
                 </li>
                 <li class="nav-link">
@@ -45,7 +46,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#test">
                         <i class='bx bx-notepad icon' ></i>
                         <span class="text nav-text">TESTS</span>
                     </a>
@@ -76,10 +77,11 @@
     </div>
 </nav>
 <section class="home">
-    <h3 class="text">My Dashboard</h3>
+    <h3 class="text text-center">{{user.first_name}}'s  Dashboard</h3>
     <div class="intro">
-        <div class="card new">
+        <div class="card new" id="test">
             <h4 class="text-muted">Available tests:</h4>
+            {% if tests %}
             {% for test in tests %}
             <div class="card tests">
                 <h4 style="color: #5E5CC0;"><a href="{% url 'testDetail' test.pk %}" style="text-decoration: none; color: #5E5CC0;">{{test.title}}</a></h4>
@@ -89,28 +91,35 @@
                         ATTEMPT</a></p></strong>
             </div>
             {% endfor %}
+
+            {% else %}
+            <div class="card tests">
+                <h4 style="color: #5E5CC0;"><a href="{% url 'testDetail' test.pk %}" style="text-decoration: none; color: #5E5CC0;">
+                    Tests will be posted in a few soon...</a></h4>
+                </div>
+            {% endif %}
         </div>
         <!--NEWS-->
         <div class="what">
             <h4 class="text-muted">What's new:</h4>
-            {% for activeCourse in activeCourses %}
-            <div class="card headline">
-                <h4 class="">{{activeCourse.title}}</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
-            </div>
-            {% endfor %}
+            {% if news %}
+                {% for pop in pops %}
                 <div class="card headline">
-                <h4 class="">Headline 2</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
-            </div>
-            <div class="card headline">
-                <h4 class="">Headline 3</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
-            </div>
+                    <h4 class="">{{pop.title}}</h4>
+                    <p class="text-muted">{{pop.description}}</p>
+                </div>
+                {% endfor %}
+            {% else %}
+                <div class="card headline">
+                    <h4 class="">Ooops... </h4>
+                    <p class="text-muted">There's no news... Study hard though!</p>
+                </div>
+            {% endif %}
         </div>
     </div>
     <div class="card courses">
         <h4 class="text-muted">My Courses:</h4>
+        {% if activeCourses %}
         {% for activeCourse in activeCourses %}
         <div class="card angular">
             <h5 class="text-muted">{{activeCourse.category}}</h5>
@@ -122,6 +131,11 @@
             </p>
         </div>
         {% endfor %}
+        {% else %}
+        <div class="card tests">
+            <h4 style="color: #5E5CC0;"><a href="{% url 'testDetail' test.pk %}" style="text-decoration: none; color: #5E5CC0;">You're yet to enroll in any program...</a></h4>
+            </div>
+        {% endif %}
         
        
     </div>
